data/derived/comb/progs/unify/prog4471.ml.out
Characters 7-13:
  wwhile fptest 0;;
         ^^^^^^
Error: This expression has type int -> int
       but an expression was expected of type
         (('a -> 'b) -> ('a -> 'b) * bool) * ('a -> 'b)
